--- a/homepage/index.html
+++ b/homepage/index.html
@@ -14,11 +14,11 @@
         <div class="heading">
             <h1><strong>Home Page</strong></h1>
             <div class="pages">
-                <h2><a href="">Home</a></h2>
-                <h2> <a href="">Units</a></h2>
+                <h2><a href="/homepage/index.html">Home</a></h2>
+                <h2> <a href="/unitspage/index.html">Units</a></h2>
             </div>
         </div>
-        <img src="images/aoe.jpg" alt="">
+        <img src="images/aoe.jpg" alt="Age-Of-Empires">
     </div>
 
 </body>
