--- a/unitsdetailpage/index.html
+++ b/unitsdetailpage/index.html
@@ -1,1 +1,28 @@
-TEST
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Unit Detail Page</title>
+    <script src="index.js"></script>
+</head>
+
+<body onload="loadData()">
+    <div class="maincontainer">
+        <div class="heading">
+            <h1><strong>Unit Detail Page</strong></h1>
+            <div class="pages">
+                <h2><a href="/homepage/index.html">Home</a></h2>
+                <h2> <a href="/unitspage/index.html">Units</a></h2>
+            </div>
+        </div>
+    </div>
+    <div>
+        <table id="detail-table" style="width: 100%;"></table>
+    </div>
+</body>
+
+</html>
