--- a/unitspage/index.html
+++ b/unitspage/index.html
@@ -17,14 +17,14 @@
         <div class="heading">
             <h1><strong>Units Page</strong></h1>
             <div class="pages">
-                <h2><a href="">Home</a></h2>
-                <h2> <a href="">Units</a></h2>
+                <h2><a href="/homepage/index.html">Home</a></h2>
+                <h2> <a href="/unitspage/index.html">Units</a></h2>
             </div>
 
         </div>
     </div>
     <h2>Ages</h2>
-    <div class="radiobuttons">
+    <div id="radiobuttons">
         <input type="radio" id="All" name="ages" value="All">
         <label for="All">All</label><br>
         <input type="radio" id="Dark" name="ages" value="Dark">
@@ -70,7 +70,7 @@
     <div>
         <table id="units-table" style="width:100%">
             <tr>
-                <th style="background-color: black; color: white;">id</th>
+                <th style="background-color: black; color: white;" onclick="">id</th>
                 <th style="background-color: black; color: white;">name</th>
                 <th style="background-color: black; color: white;">age</th>
                 <th style="background-color: black; color: white;">cost</th>
