--- a/homepage/index.html
+++ b/homepage/index.html
@@ -18,7 +18,7 @@
                 <h2> <a href="/unitspage/index.html">Units</a></h2>
             </div>
         </div>
-        <img src="images/aoe.jpg" alt="Age-Of-Empires">
+        <img src="/images/aoe.jpg" alt="Age-Of-Empires">
     </div>
 
 </body>
